Fixed responsiveness on mobile for newly styled sub-sections.

--- a/src/app/[id]/components/CaseStudySection/CaseStudySection.scss
+++ b/src/app/[id]/components/CaseStudySection/CaseStudySection.scss
@@ -12,11 +12,27 @@
     display: grid;
     justify-items: center;
     gap: 3rem;
-    background-color: rgba(211, 211, 211, 0.5);
-    padding: 3rem 6rem;
     margin: 0 4rem;
+    padding: 4rem;
+    background-color: rgba(196, 196, 196, 0.35);
+
+    @include breakpoint(large) {
+      margin: 0 3rem;
+      padding: 3rem;
+    }
+
+    @include breakpoint(medium) {
+      padding: 2rem;
+      margin: 0;
+    }
 
     @include breakpoint(small) {
+      padding: 2rem;
+      gap: 1.5rem;
+    }
+
+    @include breakpoint(x-small) {
+      padding: 1.5rem;
       gap: 1.5rem;
     }
   }
