--- a/src/app/[id]/components/ImageRow/ImageRow.scss
+++ b/src/app/[id]/components/ImageRow/ImageRow.scss
@@ -7,7 +7,7 @@
   width: 100%;
   gap: 2rem;
 
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     grid-template-columns: 1fr;
   }
 }
