--- a/src/app/[id]/components/ImageWithCaption/ImageWithCaption.scss
+++ b/src/app/[id]/components/ImageWithCaption/ImageWithCaption.scss
@@ -7,7 +7,7 @@
   justify-self: center;
   max-width: var(--image-max-width, 100%);
 
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     max-width: 100%;
   }
 
